@@ -11,6 +11,7 @@
 	<!-- 32012 -->
 	<string id="32013">Do not add streams which are in "[OV]" (e. g. AMAZON VOD)</string>
 	<string id="32014">Kodi is using MYSQL-Database</string>
+	<string id="32015">Detect Kodi's SQLite DBs automatically</string>
 	
 	<string id="31000">Content</string>
 	<string id="31004">Write NFOs (ComingSoon)</string>
