@@ -2,6 +2,7 @@
 <settings>
     <category label="32000">
         <setting label="32014" type="bool" id="USE_MYSQL" default="false"/>
+        <setting label="32015" type="bool" id="Find_SQLite_DB" default="false" subsetting="true" visible="eq(-1,false)"/>
         <setting label="32003" type="folder" id="STRM_LOC" source="auto" default="special://userdata/addon_data/plugin.video.osmosis/strms"/>   
         <setting label="32006" type="enum" id="Link_Type" values="OSMOSIS|Original Plugin" default="0"/>
         <setting label="32008" type="bool" id="Clear_Strms" default="false"/>
@@ -19,7 +20,7 @@
     	<setting label="31005" type="bool" id="folder_movie" default="false"/>
     </category>
       <category label="33000">
-      	<setting label="33001" type="bool" id="Updat_at_startup" default="true"/>
+      	<setting label="33001" type="bool" id="Update_at_startup" default="true"/>
         <setting label="33002" type="bool" id="Automatic_Update_Run" default="true" />
         <setting label="33003" type="select" id="Automatic_Update_Time" subsetting="true" visible="eq(-1,true)" values="1|3|6|12|24|48|72" default="6" option="int"/>
         <setting label="33004" id="update_time" type="time" default="0:00"/>
