@@ -19,7 +19,9 @@ import os
 import time
 from modules import updateAll
 from modules import guiTools
+import utils
 import xbmc, xbmcgui, xbmcaddon, xbmcvfs
+import re
 
 # Debug option pydevd:
 if False:
@@ -43,15 +45,44 @@ STRM_LOC = REAL_SETTINGS.getSetting('STRM_LOC')
 Path_Type = REAL_SETTINGS.getSetting('Path_Type')
 Clear_Strms = REAL_SETTINGS.getSetting('Clear_Strms') == 'true'
 Automatic_Update_Time = REAL_SETTINGS.getSetting('Automatic_Update_Time') 
-Updat_at_startup = REAL_SETTINGS.getSetting('Updat_at_startup')
+Update_at_startup = REAL_SETTINGS.getSetting('Update_at_startup')
 Automatic_Update_Delay = REAL_SETTINGS.getSetting('Automatic_Update_Delay')
 Automatic_Update_Run = REAL_SETTINGS.getSetting('Automatic_Update_Run')
+USE_MYSQL = REAL_SETTINGS.getSetting('USE_MYSQL')
+Find_SQLite_DB = REAL_SETTINGS.getSetting('Find_SQLite_DB')
 represent = os.path.join(ADDON_PATH, 'icon.png')
 toseconds = 0.0
 itime = 5000000000  # in miliseconds 
-   
+
+def setDBs(files, path):
+    dbtypes = ['video', 'music']
+
+    for dbtype in dbtypes:
+        dbname = None
+        for file in files:
+            if file.lower().startswith('my' + dbtype):
+                if dbname is None:
+                    dbname = file
+                elif re.search('(\d+)', dbname) and re.search('(\d+)', file):
+                    dbnumber = int(re.search('(\d+)', dbname).group(1))
+                    filedbnumber = int(re.search('(\d+)', file).group(1))
+                    if filedbnumber > dbnumber:
+                        dbname = file
+
+        if dbname is not None:
+            dbpath = xbmc.translatePath(os.path.join(path, dbname))
+            dbsetting = REAL_SETTINGS.getSetting('KMovie-DB path') if dbtype == 'video' else REAL_SETTINGS.getSetting('KMusic-DB path')
+            if dbpath != dbsetting:
+                REAL_SETTINGS.setSetting('KMovie-DB path', dbpath) if dbtype == 'video' else REAL_SETTINGS.setSetting('KMusic-DB path', dbpath)
+
 if __name__ == "__main__":
-    if Updat_at_startup == "true":                        
+    if USE_MYSQL == 'false' and Find_SQLite_DB == 'true':
+        path = xbmc.translatePath(os.path.join("special://home/", 'userdata/Database/'))
+        if xbmcvfs.exists(path):
+            dirs, files = xbmcvfs.listdir(path)
+            setDBs(files, path)
+        
+    if Update_at_startup == "true":                        
         updateAll.strm_update()
  
     monitor = xbmc.Monitor()
