@@ -3,6 +3,7 @@
   Gismo112 Add SkinUpdate Resume / Watchedstates
   gu3nter  Sqlite3 and MYSQL are now supported in one Branch
   Maven85  Set content of listitems; remove setting of support for exodus/xstream 
+  Maven85  Option to detect Kodi's SQLite DBs automatically
 
 1.2.9-1.3.0
   Gismo112 Fix watchedstate for not resumed video
